--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
 
 <body>
     <div class="submitForm">
-        <form action="submit">
+        <form name="myForm" action="submit" onsubmit="return validateForm()">
             <div id="birth">
-                <label for="birthday">Enter your birthday</label>
-                <input type="text">
-                <label for="day">Day</label>
-                <input type="text">
+
+
+                <!-- Label should have 3 input fields -->
+
+                <h1>Enter your birthday</h1>
+                <label id="day" for="day">Day</label>
+                <input name="day" type="text">
                 <label for="month">Month</label>
-                <input type="text">
+                <input name="month" type="text">
             <label for="year">Year</label>  
-            <input type="text">          
+            <input name="year" type="text">          
         </div>
     
             <div id="gender">
+                <h1>    Select your Gender</h1>
                 <label for="gender">Select your gender</label>
                 <select id="gender">
-                    <option value="gender">select gender</option>
+                    <option value="gender">select</option>
                     <option value="male">Male</option>
                     <option value="female">Female</option>
 
