--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Akan-Name</title>
 </head>
+
 <body>
-    <div class="container">
-        <form action="submit">
-            <label for="gender">Gender</label>
+    <div class="container-md">
+
+        <h1>Akan Names</h1>
+        <p>Akan names come from a traditional naming system for people from countries such as Togo, Ivory Coast and Ghana. A
+            child’s name is determined by factors surrounding his or her birth. For example, the day of their birth or
+            the manner in which they were born may determine which name they get irrespective of their gender. These
+            Akan names signify the day one is born. According to Akan tradition, each child is born with a name
+            associated to their soul. The day the child is born is therefore determined by the soul. The well thought
+            and organized naming system of the Akan’s was initiated by the ancestors and has attracted so many people’s
+            attention as they desire to know more about these names. As a matter of fact, it is possible to tell what
+            led to someone’s birth, the day they were born and their rank among the siblings just by their names. This
+            is why you need to read this article to know more about Akan names and their meanings  <a href=" https://yen.com.gh/115080-akan-names-meanings.html">Read more</a> 
+           </p>
+        <form>
+            <label for="gender">Gender</label> <br>
             <select name="gender" id="gender">
-                <option  value="male">Male</option>
+                <option>Gender</option>
+                <option value="male">Male</option>
                 <option value="female">Female</option>
             </select> <br>
 
             <label for="bday">Birthdate</label> <br>
             <select name="day" id="day" required>
                 Day
-                <option value="">day</option>
+                <option value="">Day</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -52,6 +72,7 @@
                 <option value="30">30</option>
                 <option value="31">31</option>
             </select>
+
             <select name="month" id="month" required>
                 Month
                 <option value="">Month</option>
@@ -68,6 +89,7 @@
                 <option value="11">November</option>
                 <option value="12">December</option>
             </select>
+
             <select name="year" id="year" required>
                 Year
                 <option value="">Year</option>
@@ -100,6 +122,7 @@
 
 
     </div>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
