applied page breaks on sections of the form

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             and organized naming system of the Akan’s was initiated by the ancestors and has attracted so many people’s
             attention as they desire to know more about these names. As a matter of fact, it is possible to tell what
             led to someone’s birth, the day they were born and their rank among the siblings just by their names. This
-            is why you need to read this article to know more about Akan names and their meanings  <a href=" https://yen.com.gh/115080-akan-names-meanings.html">Read more</a> 
+            is why you need to read this article to know more about Akan names and their meanings  <a href=" https://yen.com.gh/115080-akan-names-meanings.html" target="_blank">Read more</a> 
            </p>
         <form>
             <label for="gender">Gender</label> <br>
@@ -115,7 +115,7 @@
                 <option value="2002">2002</option>
                 <option value="2001">2001</option>
                 <option value="2000">2000</option>
-            </select>
+            </select><br>
             <button onclick="computeForm()" type="submit">Submit</button>
         </form>
 
