updated labels on the form

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             is why you need to read this article to know more about Akan names and their meanings  <a href=" https://yen.com.gh/115080-akan-names-meanings.html" target="_blank">Read more</a> 
            </p>
         <form>
-            <label for="gender">Gender</label> <br>
+            <label for="gender">Select Your Gender</label> <br>
             <select name="gender" id="gender">
                 <option>Gender</option>
                 <option value="male">Male</option>
                 <option value="female">Female</option>
             </select> <br>
 
-            <label for="bday">Birthdate</label> <br>
+            <label for="bday">Enter your Birthday</label> <br>
             <select name="day" id="day" required>
                 Day
                 <option value="">Day</option>
