--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body>
     <div class="container-md">
-
-        <h1>Akan Names</h1>
+<div class="container">
+    <h1>Akan Names</h1>
         <p>Akan names come from a traditional naming system for people from countries such as Togo, Ivory Coast and Ghana. A
             child’s name is determined by factors surrounding his or her birth. For example, the day of their birth or
             the manner in which they were born may determine which name they get irrespective of their gender. These
@@ -118,6 +118,8 @@
             </select><br>
             <button onclick="computeForm()" type="submit">Submit</button>
         </form>
+</div>
+        
 
 
 
