--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
                 <form>
                     <label for="gender">Select Your Gender</label> <br>
                     <select name="gender" id="gender" required>
-                        <option>Gender</option>
-                        <option id="male">male</option>
-                        <option id="female">female</option>
+                        <option id="male">Male</option>
+                        <option id="female">Female</option>
                     </select> <br>
         
                     <label for="bday">Enter your Birthday</label> <br>
